tests/fixtures/invalid/none_mul_dict.py
# Cannot multiply None and Dict[str, int]
x: None = None * {"a": 1}
